Completed story 2 and made some changed to the layout